--- a/style/style.css
+++ b/style/style.css
@@ -100,4 +100,17 @@
   background-color: #3f8fa9;
   color: white;
 }
+
+#kanta {
+  color: #da3f6d;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+#kanta:hover {
+  cursor: pointer;
+  color: red;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
 /*# sourceMappingURL=style.css.map */
